resources/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oci-registry
  labels:
    app.kubernetes.io/name: oci-registry
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: oci-registry
  template:
    metadata:
      labels:
        app.kubernetes.io/name: oci-registry
    spec:
      containers:
        - name: oci-registry
          image: registry:2
          ports:
            - containerPort: 443
          volumeMounts:
            - name: certs
              mountPath: /certs
              readOnly: true
            - name: auth
              mountPath: /auth
              readOnly: true
            - name: data
              mountPath: /var/lib/registry
      volumes:
        - name: certs
          secret:
            secretName: registry-visoft-dev-tls
        - name: auth
          secret:
            secretName: htpasswd
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: oci-registry
spec:
  type: LoadBalancer
  loadBalancerIP: 10.4.4.135
  selector:
    app.kubernetes.io/name: oci-registry
  ports:
    - name: https-tcp
      protocol: TCP
      port: 443
      targetPort: 443
    - name: https-udp
      protocol: UDP
      port: 443
      targetPort: 443
