resources/production-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nginx-production-gateway
  annotations:
    cert-manager.io/issuer: visoft-dev-http01
spec:
  gatewayClassName: nginx-production
  listeners:
    - name: production-visoft-dev-http
      protocol: HTTP
      port: 80
      hostname: hosting.visoft.dev
      allowedRoutes:
        namespaces:
          from: All
    - name: production-visoft-dev-https
      protocol: HTTPS
      port: 443
      hostname: hosting.visoft.dev
      tls:
        certificateRefs:
          - name: hosting-visoft-dev-tls
      allowedRoutes:
        namespaces:
          from: All

    - name: hunters-visoft-dev-http
      protocol: HTTP
      port: 80
      hostname: hunters.visoft.dev
      allowedRoutes:
        namespaces:
          from: All
    - name: hunters-visoft-dev-https
      protocol: HTTPS
      port: 443
      hostname: hunters.visoft.dev
      tls:
        certificateRefs:
          - name: hunters-visoft-dev-tls
      allowedRoutes:
        namespaces:
          from: All

    - name: selftech-pl-http
      protocol: HTTP
      port: 80
      hostname: selftech.pl
      allowedRoutes:
        namespaces:
          from: All
    - name: selftech-pl-https
      protocol: HTTPS
      port: 443
      hostname: selftech.pl
      tls:
        certificateRefs:
          - name: selftech-pl-tls
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-production-gateway
spec:
  type: LoadBalancer
  loadBalancerIP: 10.4.4.140
  selector:
    app.kubernetes.io/instance: nginx-production-gateway
  ports:
    - name: http-tcp
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https-tcp
      protocol: TCP
      port: 443
      targetPort: 443
    - name: http-udp
      protocol: UDP
      port: 80
      targetPort: 80
    - name: https-udp
      protocol: UDP
      port: 443
      targetPort: 443
